--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -24,25 +24,17 @@
 			{% csrf_token %}
 			<div class="form-group">
 				<input
-					name="firstname"
+					name="fullname"
 					class="form-control"
-					placeholder="First Name"
+					placeholder="Full Name"
 					required
 				/>
 			</div>
 			<div class="form-group">
 				<input
-					name="lastname"
+					name="location"
 					class="form-control"
-					placeholder="Last Name"
-					required
-				/>
-			</div>
-			<div class="form-group">
-				<input
-					name="username"
-					class="form-control"
-					placeholder="UserName"
+					placeholder="Location"
 					required
 				/>
 			</div>
@@ -52,6 +44,23 @@
 					type="email"
 					class="form-control"
 					placeholder="Email Address"
+					required
+				/>
+			</div>
+			<div class="form-group">
+				<input
+					name="phone"
+					type="number"
+					class="form-control"
+					placeholder="Contact Number"
+					required
+				/>
+			</div>
+			<div class="form-group">
+				<input
+					name="username"
+					class="form-control"
+					placeholder="UserName"
 					required
 				/>
 			</div>
@@ -73,6 +82,20 @@
 					required
 				/>
 			</div>
+			<div class="form-group">
+				<h3>Are you a Parent Or School ?
+			</div>
+			<input
+					name="account_type"
+					type="radio"
+					value="parent"
+				/>Parent <br>
+				<input
+					name="account_type"
+					type="radio"
+					value="school"
+				/>
+				School </br>
 
 			<button type="submit" class="btn btn-accent form-btn w-100 mt-3 mb-3">
 				Signup
