complete signup and login

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -88,12 +88,12 @@
 			<input
 					name="account_type"
 					type="radio"
-					value="parent"
+					value="Parent"
 				/>Parent <br>
 				<input
 					name="account_type"
 					type="radio"
-					value="school"
+					value="School"
 				/>
 				School </br>
 
