--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -13,7 +13,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<img
-				src="{% static './assets/images/login-image.png' %}"
+				src="{% static '/SchoolBusTracker/static/assets/images/main-page.svg' %}"
 				class="img-fluid"
 				alt="img"
 			/>
