--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<img
-				src="{% static './assets/images/login-image.png' %}"
+				src="{% static './assets/images/main-page.svg' %}"
 				class="img-fluid"
 				alt="img"
 			/>
