--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,9 +5,9 @@
 		<div class="row">
 			<div class="col-md-6 header-info">
 				<a href="mailto:info@bustracker.com" class="mr-3"
-					>info@bustracker.com</a
+					>info@easybus.com</a
 				>
-				<span>Call at: +977 9898989898 </span>
+				<span>Call at: +977 9800000000 </span>
 			</div>
 			<div class="header-buttons col-md-6 d-flex justify-content-end">
 				{% if user.is_authenticated %} {%if user.is_superuser%}
@@ -15,8 +15,8 @@
 				{%endif%}
 				<a class="btn btn-accent" href="{% url 'logout' %}">Logout</a>
 				{% else %}
-				<a class="btn btn-accent mr-3" href="{% url 'login' %}">Signin</a>
-				<a class="btn btn-accent" href="{% url 'register' %}">SignUp</a>
+				<a class="btn btn-accent mr-3" href="{% url 'login' %}">Sign In</a>
+				<a class="btn btn-accent" href="{% url 'register' %}">Sign Up</a>
 				{% endif %}
 			</div>
 		</div>
