Added some designs

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 
 <main class="register container">
-	<h1 class="text-center mt-5 mb-5">Register</h1>
+	<h1 class="text-center mt-4 mb-5">Register</h1>
 
 	<!-- Include message.html to display error message  -->
 	<div class="row">
@@ -25,6 +25,7 @@
 			<div class="form-group">
 				<input
 					name="fullname"
+					type="text"
 					class="form-control"
 					placeholder="Full Name"
 					required
@@ -33,6 +34,7 @@
 			<div class="form-group">
 				<input
 					name="location"
+					type="text"
 					class="form-control"
 					placeholder="Location"
 					required
@@ -50,7 +52,7 @@
 			<div class="form-group">
 				<input
 					name="phone"
-					type="number"
+					type="text"
 					class="form-control"
 					placeholder="Contact Number"
 					required
@@ -61,6 +63,7 @@
 					name="username"
 					class="form-control"
 					placeholder="UserName"
+					type="text"
 					required
 				/>
 			</div>
@@ -98,7 +101,7 @@
 				School </br>
 
 			<button type="submit" class="btn btn-accent form-btn w-100 mt-3 mb-3">
-				Signup
+				Sign Up
 			</button>
 			<!-- <div class="text-center">
           OR
