--- a/templates/accounts/driver.html
+++ b/templates/accounts/driver.html
@@ -29,10 +29,25 @@
       href="../../SchoolBusTracker/static/css/mediaquery.css"
     />
     <title>SBT</title>
-  </head>
 
+    <style>
+      .make{
+      display:none;
+      }
+    </style>
+  </head>
+  <script>
+    function myFunction() {
+      document.getElementById("check").style.display="block";}
+      
+    </script>
   <body>
-    <main class="login container">
+    <div>
+      <button type="submit" id="demo" onclick="myFunction()" class="btn btn-accent form-btn w-100 mt-3 mb-3">
+        Add Driver Profile +
+      </button>
+    </div>
+    <main class="login container make" id="check">
       <h1 class="text-center mt-5 mb-5 animate__animated animate__slideInDown">
         Enter Driver details
       </h1>
