Aashu (#6) Add styles to signup page
add images and styles

--- a/templates/accounts/menu_index.html
+++ b/templates/accounts/menu_index.html
@@ -35,7 +35,7 @@
         <a href="login_parents.html"><button type="submit" class="btn btn-accent form-btn w-100 mt-3 mb-3">
             Parents
           </button></a>
-          <a href="login_school.html"<button type="submit" class="btn btn-accent form-btn w-100 mt-3 mb-3">
+          <a href="login_school.html"><button type="submit" class="btn btn-accent form-btn w-100 mt-3 mb-3">
             School
           </button></a>
       </div>
