--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -13,7 +13,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<img
-				src="{% static './assets/images/login-image.png' %}"
+				src="{% static './assets/images/main-page.svg' %}"
 				class="img-fluid"
 				alt="img"
 			/>
@@ -23,6 +23,7 @@
 			<div class="form-group">
 				<input
 					name="username"
+					type="text"
 					class="form-control"
 					placeholder="User Name"
 					required
@@ -40,7 +41,7 @@
 			</div>
 
 			<button type="submit" class="btn btn-accent form-btn w-100 mt-3 mb-3">
-				Signin
+				Sign In
 			</button>
 			<!-- <div class="text-center">
           OR
