--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -3,10 +3,8 @@
 	<div class="container">
 		<a class="navbar-brand" href="/">
 			<img
-				src="{% static './assets/images/logo.png' %}"
-				alt=""
-				width="140"
-				height="30"
+				src="{% static './assets/images/logo-text.svg' %}"
+				height="90"
 				alt=""
 				loading="lazy"
 			/>
