add simple parent and driver dashboard html

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6 text-lg-left text-center">
-					<h4>School Bus Tracker</h4>
+					<h4>Easy Bus</h4>
 				</div>
 				
 				<div class="col-sm-6 text-lg-right text-center">
