--- a/templates/accounts/parent-dashboard.html
+++ b/templates/accounts/parent-dashboard.html
@@ -1,1 +1,6 @@
+{% extends 'base.html' %} {% load static %} {% block content %}
+<main>
 <h1>This is Parent Dashboard</h1>
+</main>
+
+{% endblock %}
