--- a/templates/accounts/driver-dashboard.html
+++ b/templates/accounts/driver-dashboard.html
@@ -1,6 +1,137 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <main>
-<h1>This is Driver Dashboard</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>enterdata</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+      crossorigin=""
+    ></script>
+    <style>
+      #map {
+        height: 350px;
+      }
+    </style>
+  </head>
+    <!-- <div>
+      <input id="latitude" placeholder="Enter latitude" />
+    </div>
+
+    <div>
+      <input id="longitude" placeholder="Enter  longitude" />
+    </div>
+
+    <button id="submit" value="send" onClick( )="">Submit</button> -->
+
+    <!-- <form id="mapCenterForm">
+        <label for="latitude">lat</label>
+        <input type="text" id="lat" name="latitude" placeholder="0.000000">
+    
+        <label for="longitude">lng</label>
+        <input type="text" id="lng" name="longitude" placeholder="0.000000">
+        <br>
+        <input type="submit">
+    </form> -->
+
+    <h1>Driver Current Location</h1>
+
+    <div id="map"></div>
+  <script>
+    var map = L.map("map");
+    map.setView([51.505, -0.09], 15);
+
+    L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      maxZoom: 19,
+      attribution:
+        '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+    }).addTo(map);
+    let options = {
+      enableHighAccuracy: false,
+      timeout: 5000,
+      maximumAge: 0,
+    };
+
+    //navigator.geolocation.watchPosition(success, error, options);
+    setInterval(
+      () => navigator.geolocation.getCurrentPosition(success, error, options),
+      10000
+    );
+    let marker, circle, zoomed;
+    function submit() {
+      const lat = document.getElementById("latitude").value;
+      const lng = document.getElementById("longitude").value;
+      console.log(lng);
+      console.log(lat);
+      var map = L.map("map").setView([lat, lng], 12);
+      var marker = L.marker([lat, lng]).addTo(map);
+    }
+    function success(pos) {
+      console.log("button clicked");
+      // console.log(pos.coords);
+      // const lat = document.getElementById("latitude").value;
+      // const lng = document.getElementById("longitude").value;
+      console.log(`latitude is ${pos.coords.latitude}`);
+      console.log(`longitude is ${pos.coords.longitude}`);
+
+      const accuracy = pos.coords.accuracy;
+      if (marker) {
+        map.removeLayer(marker);
+        map.removeLayer(circle);
+      }
+
+      marker = L.marker([pos.coords.latitude, pos.coords.longitude]).addTo(map);
+      circle = L.circle([pos.coords.latitude, pos.coords.longitude], {
+        radius: accuracy,
+      }).addTo(map);
+
+      if (!zoomed) {
+        zoomed = map.fitBounds(circle.getBounds());
+      }
+      map.setView([pos.coords.latitude, pos.coords.longitude]);
+    }
+
+    function error(err) {
+      console.log(err);
+      if (err.code === 1) {
+        alert("Please allow geolocaiton access");
+      } else {
+        alert("Cannot get current location");
+      }
+    }
+    // const btn = document.querySelector("#submit");
+    // const longEl = document.querySelector("#longitude");
+    // const latEl = document.querySelector("#latitude");
+
+    // btn.addEventListener("click", () => {
+    //   const latitude = latEl.value;
+    //   const longitude = longEl.value;
+
+    // console.log(latitude, longitude);
+    //   marker.setLatLng([latitude, longitude]);
+    // });
+
+    // function changeMarkerPosition(marker) {
+    //   var latlng = new google.maps.LatLng(
+    //     latitude_input_id,
+    //     longitude_input_id
+    //   );
+    //   marker.setPosition(latlng);
+    // }
+  </script>
+
 </main>
+
+
+
+
 
 {% endblock %}
