remove submit box

--- a/templates/accounts/parent-dashboard.html
+++ b/templates/accounts/parent-dashboard.html
@@ -24,15 +24,15 @@
     </style>
   </head>
   <body>
-    <div>
+    {% comment %} <div>
       <input id="latitude" placeholder="Enter latitude" />
     </div>
     <div>
       <input id="longitude" placeholder="Enter  longitude" />
     </div>
-    <button id="submit" value="send">Submit</button>
+    <button id="submit" value="send">Submit</button> {% endcomment %}
 
-    <h1>Map user location</h1>
+    <h1>Show the Driver location</h1>
 
     <div id="map"></div>
   </body>
